feat: swagger ui at /docs/
